objects/ApexLogger__c.object
<CustomObject>
    <description>The custom object that could store the error details when processing Apex and Visualforce code.</description>
    <fields>
        <fullName>ClassName__c</fullName>
        <description>Name of the class that generated the error</description>
        <label>Class Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ErrorDescription__c</fullName>
        <description>Description of the error</description>
        <label>Error Description</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>ErrorMessage__c</fullName>
        <description>Stores the Error Message which is either passed by developer  else derived from Exception.</description>
        <label>Error Message</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>ExceptionType__c</fullName>
        <description>Stores Type of Exception</description>
        <label>Exception Type</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FunctionName__c</fullName>
        <description>Name of the function that generated the error</description>
        <label>Function Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LogParentRecordId__c</fullName>
        <description>SFDC-1763: Parent record Id of record that resulted in error</description>
        <inlineHelpText>Parent record Id of record that resulted in error</inlineHelpText>
        <label>Log Parent Record Id</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LogParentRecordName__c</fullName>
        <description>SFDC-1763: Parent record name of record that resulted in error</description>
        <inlineHelpText>Parent record name of record that resulted in error</inlineHelpText>
        <label>Log Parent Record Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LogRecordId__c</fullName>
        <description>SFDC-1763: Id of record that resulted in error</description>
        <inlineHelpText>Id of record that resulted in error</inlineHelpText>
        <label>Log Record Id</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LogRecordJson__c</fullName>
        <description>Details about Object on which is passed to Exception Framework</description>
        <label>Log Record Json</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>LogRecordName__c</fullName>
        <description>SFDC-1763: Name of record that resulted in error</description>
        <label>Log Record Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PKIDApexLogger__c</fullName>
        <description>SFDC1-2445 : Creating PK field for Data Migration Support</description>
        <displayFormat>Apx{000000}</displayFormat>
        <externalId>true</externalId>
        <label>PKID ApexLogger</label>
        <type>AutoNumber</type>
    </fields>
    <fields>
        <fullName>TransactionId__c</fullName>
        <description>Transaction ID of Salesforce  transaction</description>
        <label>Transaction Id</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>User__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>User Id of Logged in User.</description>
        <label>User</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Apex_Logger</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Apex Logger</label>
    <nameField>
        <displayFormat>APEXLOG-{00000}</displayFormat>
        <label>Apex Logger Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Apex Logger</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>